deploy/k8s/00-namepsace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: yopass
  name: yopass
