deploy/k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yopass
  namespace: yopass
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: yopass
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yopass
    spec:
      containers:
        - name: yopass
          image: jhaals/yopass
          args:
            - "--redis=redis://localhost:6379/0"
            - "--database=redis"
          ports:
            - name: http
              containerPort: 1337
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 50Mi
        - name: yopass-redis
          image: redis
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - name: redis
              containerPort: 6379
---
kind: Service
apiVersion: v1
metadata:
  name: yopass
  namespace: yopass
spec:
  selector:
    app.kubernetes.io/name: yopass
  type: ClusterIP
  ports:
    - name: http
      port: 1337
